2010-10-31  Robert Larice
 * src/include/memory.h ,
 * src/maths/sparse/spdefs.h ,
 * src/xspice/icm/xtraevt/int/udnfunc.c ,
 * src/xspice/icm/xtraevt/real/udnfunc.c :
    cleanup TMALLOC etc macros

2010-10-31  Holger Vogt
 * compile_min.sh: exit upon autogen or configure error
 
2010-10-31  Dietmar Warning
 * src/spicelib/analysis/cktsetup.c, cktsopt.c: Allow maxord=1 w/o crash for 
   experimenting with backward Euler, works so far - but other timestep control
   then LTE is needed in dctran.c
 * src/spicelib/analysis/dctran.c: only indentation for better readability
 
2010-10-28  Robert Larice
 * src/**/* :
    wrap tmalloc MALLOC etc, into two macros TMALLOC and TREALLOC
      add casts to those macros to silence type conversion warnings

2010-10-28  Robert Larice
 * src/frontend/commands.c ,
 * src/frontend/control.c :
    bug fix, incorrect handling of `co_spiceonly' commands
      http://sourceforge.net/tracker/?func=detail&aid=3092998&group_id=38962&atid=423915

2010-10-27  Robert Larice
 * src/frontend/device.c :
    bug fix, const data space was used, instead of malloced area

2010-10-27  Robert Larice
 * src/spicelib/devices/asrc/asrcset.c ,
 * src/xspice/mif/mifgetvalue.c :
    realloc does work, even with NULL argument

2010-10-27  Robert Larice
 * src/spicelib/devices/bsim3soi/b4soitemp.c :
    use tmalloc instead of malloc

2010-10-27  Robert Larice
 * src/spicelib/analysis/cktmcrt.c ,
 * src/spicelib/analysis/cktnewan.c ,
 * src/xspice/cm/cmevt.c ,
 * src/xspice/evt/evtload.c :
    use tmalloc and trealloc instead of MALLOC and REALLOC

2010-10-27  Robert Larice
 * src/spicelib/analysis/distoan.c :
    bug fix ?, this fix is a mere guesswork, FIXME

2010-10-27  Robert Larice
 * src/spicelib/devices/ltra/ltraask.c ,
 * src/spicelib/devices/tra/traask.c :
    bug fix, malloced space too small

2010-10-25  Holger Vogt
 * src/frontend/inpcom.c: add guards if strstr returns NULL

2010-10-24  Robert Larice
 * src/frontend/inpcom.c ,